--- a/css/components/_header.scss
+++ b/css/components/_header.scss
@@ -70,7 +70,7 @@
         width: 30px;
         height: 30px;
         background-color: transparent;
-        background-image: url("../img/search.png");
+        background-image: url("/../img/Search.png");
     }
 }
 
