--- a/css/index.css
+++ b/css/index.css
@@ -634,7 +634,7 @@ section {
   width: 30px;
   height: 30px;
   background-color: transparent;
-  background-image: url("/../img/Search.png");
+  background-image: url("../img/search.png");
 }
 
 .pressent {
